GNOME Bugzilla – Bug 689284
memory leaks
Last modified: 2012-11-30 13:07:19 UTC
see patches
Created attachment 230191 [details] [review] importer: Fix memory leak
Created attachment 230192 [details] [review] importer: Fix GError leaks
Created attachment 230193 [details] [review] dbus-exports: Fix memory leak
Created attachment 230194 [details] [review] arg: Fix mem leak
Created attachment 230195 [details] [review] dbus-values: Fix mem leak
Created attachment 230196 [details] [review] arg: Fix uninitialized pointer
Review of attachment 230191 [details] [review]: Yep, thanks!
Review of attachment 230192 [details] [review]: Looks right.
Review of attachment 230193 [details] [review]: Hm, yes.
Review of attachment 230194 [details] [review]: Ok.
Review of attachment 230195 [details] [review]: Looks correct.
Review of attachment 230196 [details] [review]: Oops! This one was my fault. Thanks for the fix!
Attachment 230191 [details] pushed as 32da445 - importer: Fix memory leak Attachment 230192 [details] pushed as 213644a - importer: Fix GError leaks Attachment 230193 [details] pushed as eec5665 - dbus-exports: Fix memory leak Attachment 230194 [details] pushed as 70ada17 - arg: Fix mem leak Attachment 230195 [details] pushed as c17d2b5 - dbus-values: Fix mem leak Attachment 230196 [details] pushed as c2c9229 - arg: Fix uninitialized pointer