importer: Fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=689284